--- a/Task-Tank-react/package.json
+++ b/Task-Tank-react/package.json
@@ -10,6 +10,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
+    "peer": "^1.0.0",
+    "peerjs": "^1.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
